--- a/Source/QIRC.NickServ/QIRC.NickServ.csproj
+++ b/Source/QIRC.NickServ/QIRC.NickServ.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6B584DF1-42E8-43BF-B5C6-759C501CA9E7}</ProjectGuid>
+    <ProjectGuid>{E8D0C208-4D5F-4694-AD86-72D70D3F36DC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OIRC.Logging</RootNamespace>
-    <AssemblyName>OIRC.Logging</AssemblyName>
+    <RootNamespace>QIRC.NickServ</RootNamespace>
+    <AssemblyName>QIRC.NickServ</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -41,9 +41,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Logging.cs" />
+    <Compile Include="NickServ.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Log.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QIRC\QIRC.csproj">
