--- a/Source/QIRC.Logging/QIRC.Logging.csproj
+++ b/Source/QIRC.Logging/QIRC.Logging.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{6B584DF1-42E8-43BF-B5C6-759C501CA9E7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OIRC.Logging</RootNamespace>
-    <AssemblyName>OIRC.Logging</AssemblyName>
+    <RootNamespace>QIRC.Logging</RootNamespace>
+    <AssemblyName>QIRC.Logging</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
