--- a/Source/QIRC.CSharp/QIRC.CSharp.csproj
+++ b/Source/QIRC.CSharp/QIRC.CSharp.csproj
@@ -34,9 +34,12 @@
       <HintPath>..\..\Dependencies\ChatSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Mono.CSharp">
+      <HintPath>Dependencies\Mono.CSharp.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CSharp.cs" />
@@ -50,6 +53,9 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy $(ProjectDir)\Dependencies\Mono.CSharp.dll $(OutDir)\..\</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
