--- a/Source/QIRC.CSharp/QIRC.CSharp.csproj
+++ b/Source/QIRC.CSharp/QIRC.CSharp.csproj
@@ -53,8 +53,10 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>copy $(ProjectDir)\Dependencies\Mono.CSharp.dll $(OutDir)\..\</PostBuildEvent>
+  <PropertyGroup Condition=" '$(OS)' != 'Unix' ">
+    <PostBuildEvent>#if !__MonoCS__
+copy $(ProjectDir)\Dependencies\Mono.CSharp.dll $(OutDir)\..\
+#endif</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
