--- a/Source/QIRC.CSharp/QIRC.CSharp.csproj
+++ b/Source/QIRC.CSharp/QIRC.CSharp.csproj
@@ -44,6 +44,9 @@
   <ItemGroup>
     <Compile Include="CSharp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SDIL\Globals.cs" />
+    <Compile Include="SDIL\ILInstruction.cs" />
+    <Compile Include="SDIL\MethodBodyReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QIRC\QIRC.csproj">
@@ -52,6 +55,7 @@
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup Condition=" '$(OS)' != 'Unix' ">
     <PostBuildEvent>copy $(ProjectDir)\Dependencies\Mono.CSharp.dll $(OutDir)\..\</PostBuildEvent>
