--- a/Source/QIRC.CSharp/QIRC.CSharp.csproj
+++ b/Source/QIRC.CSharp/QIRC.CSharp.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CSharp.cs" />
+    <Compile Include="DelegateReportPrinter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SDIL\Globals.cs" />
     <Compile Include="SDIL\ILInstruction.cs" />
