--- a/Source/QIRC.Tell/QIRC.Tell.csproj
+++ b/Source/QIRC.Tell/QIRC.Tell.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Msg.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tell.cs" />
   </ItemGroup>
