--- a/Source/QIRC.Google/QIRC.Google.csproj
+++ b/Source/QIRC.Google/QIRC.Google.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Google.cs" />
+    <Compile Include="GoogleShort.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
