--- a/Source/QIRC.CSharp/QIRC.CSharp.csproj
+++ b/Source/QIRC.CSharp/QIRC.CSharp.csproj
@@ -38,11 +38,16 @@
       <HintPath>Dependencies\Mono.CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Dependencies\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CSharp.cs" />
+    <Compile Include="CSharpSettings.cs" />
     <Compile Include="DelegateReportPrinter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SDIL\Globals.cs" />
