Add ignore command, to ignore single users

--- a/Source/QIRC/QIRC.csproj
+++ b/Source/QIRC/QIRC.csproj
@@ -68,6 +68,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckHandler.cs" />
     <Compile Include="Configuration\Settings.cs" />
     <Compile Include="Configuration\SettingsFile.cs" />
     <Compile Include="IRC\ProtoIrcAdmin.cs" />
