--- a/Source/QIRC.Ignore/QIRC.Ignore.csproj
+++ b/Source/QIRC.Ignore/QIRC.Ignore.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0D482711-1436-450F-846B-90D875731BCB}</ProjectGuid>
+    <ProjectGuid>{A3C9F71A-B61C-4C64-BF7F-6666505C9AA1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>QIRC.Commands</RootNamespace>
-    <AssemblyName>QIRC.Channel</AssemblyName>
+    <AssemblyName>QIRC.Ignore</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -38,7 +38,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Channel.cs" />
+    <Compile Include="Ignore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
