--- a/Source/QIRC.Unicode/QIRC.Unicode.csproj
+++ b/Source/QIRC.Unicode/QIRC.Unicode.csproj
@@ -57,7 +57,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>cp $(OutDir)\UnicodeInformation.dll $(OutDir)\..\</PostBuildEvent>
+    <PostBuildEvent>cp $(TargetDir)\UnicodeInformation.dll $(TargetDir)\..\</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
