--- a/Source/QIRC.Unicode/QIRC.Unicode.csproj
+++ b/Source/QIRC.Unicode/QIRC.Unicode.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnicodeInfo.cs" />
+    <Compile Include="UnicodeConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QIRC\QIRC.csproj">
