--- a/Source/QIRC/App.config
+++ b/Source/QIRC/App.config
@@ -16,9 +16,15 @@
         <param name="ConversionPattern" value="%date [%thread] %-5level %logger{1} - %m%n"/>
       </layout>
     </appender>
-    <root>
+    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%date [%thread] %-5level %logger{1} - %m%n" />
+        </layout>
+      </appender>
+      <root>
       <level value="ALL" />
       <appender-ref ref="LogFileAppender" />
+      <appender-ref ref="ConsoleAppender" />
     </root>
   </log4net>
 </configuration>
