--- a/Source/QIRC.Unicode/QIRC.Unicode.csproj
+++ b/Source/QIRC.Unicode/QIRC.Unicode.csproj
@@ -36,9 +36,11 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="UnicodeInformation, Version=2.0.0.10, Culture=neutral, PublicKeyToken=e54dbbddfea2ed0e, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\UnicodeInformation.2.0.0.10\lib\portable45-net45+win8\UnicodeInformation.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="System.Runtime.InteropServices.RuntimeInformation, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <HintPath>..\..\packages\System.Runtime.InteropServices.RuntimeInformation.4.3.0\lib\net45\System.Runtime.InteropServices.RuntimeInformation.dll</HintPath>
+    </Reference>
+    <Reference Include="UnicodeInformation, Version=2.2.1.0, Culture=neutral, PublicKeyToken=e54dbbddfea2ed0e">
+      <HintPath>..\..\packages\UnicodeInformation.2.2.1\lib\netstandard1.1\UnicodeInformation.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
